syntax = "proto3";
package logstreamer;
option go_package=".;logstreamer";

message LogRequest {
  int32 minutes = 1;
  int32 profiles = 2;
}

message LogResponse {
  repeated string result = 1;
  string profile = 2;
}

service LogStreamer {
  rpc ProcessRequest(LogRequest) returns (stream LogResponse) {};
}